Apply the patch from Dan for TUSCANY-2339. Thanks, Dan.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@663726 13f79535-47bb-0310-9956-ffa450edef68